Add SonarQube GitHub Action